--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
 # just a flag
 ENV = 'production'
 
-# base api
-VUE_APP_BASE_API = '/prod-api'
+
+# 线上环境的基地址
+VUE_APP_BASE_API = 'http://ihrm-java.itheima.net'
 
