--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@antv/data-set": "^0.11.8",
+    "@antv/g2": "^4.2.10",
     "axios": "0.18.1",
     "core-js": "^3.29.1",
     "cos-js-sdk-v5": "^1.4.16",
@@ -25,6 +27,7 @@
     "path-to-regexp": "2.4.0",
     "script-loader": "^0.7.2",
     "vue": "2.6.10",
+    "vue-i18n": "8.22.2",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "xlsx": "0.14.1"
